--- a/public/watch.html
+++ b/public/watch.html
@@ -3,7 +3,6 @@
 <head>
   <script>
     (function () {
-      // Permit local development hosts in addition to the production domains.
       var ok = ['kixonair.com', 'www.kixonair.com', '', 'localhost', '127.0.0.1'];
       try {
         if (!ok.includes(location.hostname)) location.replace('https://kixonair.com');
@@ -17,27 +16,17 @@
   <link rel="stylesheet" href="/styles.css?v=34" />
   <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
-    /*
-     * Premium match centre styling
-     *
-     * The original layout has been preserved but colours, spacing,
-     * typography and components are upgraded for a more upscale look.
-     */
     :root{
-      /* base spacing */
       --pad: clamp(12px, 3vw, 22px);
-      /* colour palette */
-      --primary-bg: #0f172a;        /* darkest panel background */
-      --secondary-bg: #1e293b;      /* card background */
-      --border-col: #334155;        /* soft border colour */
-      --accent: #6366f1;            /* violet accent for buttons */
-      --accent-hover: #7c3aed;      /* deeper violet for hover */
-      --text-col: #f1f5f9;          /* near white for text */
-      --muted-col: #94a3b8;         /* muted grey for secondary text */
-      --success-col: #10b981;       /* green for loading indicator */
+      --primary-bg: #0f172a;
+      --secondary-bg: #1e293b;
+      --border-col: #334155;
+      --accent: #6366f1;
+      --accent-hover: #7c3aed;
+      --text-col: #f1f5f9;
+      --muted-col: #94a3b8;
+      --success-col: #10b981;
     }
-
-    /* global resets and typography */
     html, body{
       margin:0; padding:0;
       background: radial-gradient(circle at top left, var(--primary-bg), var(--secondary-bg));
@@ -45,16 +34,8 @@
       font-family: 'Segoe UI', Tahoma, sans-serif;
       line-height: 1.5;
     }
-
     a{ color: inherit; }
-
-    .wrap{
-      max-width:980px;
-      margin:0 auto;
-      padding:var(--pad);
-    }
-
-    /* header bar */
+    .wrap{ max-width:980px; margin:0 auto; padding:var(--pad); }
     .headerbar{
       display:grid;
       grid-template-columns:auto 1fr auto;
@@ -63,8 +44,6 @@
       color: var(--text-col);
     }
     .headerbar .center{justify-self:center;}
-
-    /* competition badge */
     .badge{
       display:inline-block;
       border:1px solid var(--border-col);
@@ -78,8 +57,6 @@
       overflow:hidden;
       text-overflow:ellipsis;
     }
-
-    /* teams grid */
     .teams{
       display:grid;
       grid-template-columns:1fr auto 1fr;
@@ -111,9 +88,6 @@
       font-weight:600;
       line-height:1.3;
       color: var(--text-col);
-      /* Allow long team names to wrap on small screens instead of truncating.
-         Removing the truncation styles lets the browser break names onto multiple lines
-         so they remain readable on phone‑sized viewports. */
       white-space: normal;
       overflow-wrap: anywhere;
       max-width:100%;
@@ -125,9 +99,7 @@
       letter-spacing:.08em;
       color: var(--accent);
     }
-    .muted{
-      color: var(--muted-col);
-    }
+    .muted{ color: var(--muted-col); }
     .statusBig{
       margin-top:8px;
       margin-bottom:6px;
@@ -136,8 +108,6 @@
       font-weight:500;
       color: var(--accent);
     }
-
-    /* meta information grid */
     .meta{
       display:grid;
       grid-template-columns:repeat(3,minmax(0,1fr));
@@ -150,8 +120,6 @@
       box-shadow:0 4px 8px rgba(0,0,0,0.3);
     }
     @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} }
-
-    /* server bar */
     .serverbar{
       display:flex;
       flex-wrap:wrap;
@@ -181,8 +149,6 @@
       background: linear-gradient(135deg, var(--accent-hover) 0%, var(--accent) 100%);
       transform: translateY(-2px);
     }
-
-    /* loading overlay */
     .loading{
       position:fixed;
       inset:0;
@@ -219,18 +185,10 @@
       transform:translate(-50%,-50%);
       animation:pulse 1.4s ease-in-out infinite;
     }
-    .loadingText{
-      font-size:14px;
-      color: var(--muted-col);
-      letter-spacing:.02em;
-    }
+    .loadingText{ font-size:14px; color: var(--muted-col); }
     @keyframes spin{ to{ transform:rotate(360deg) } }
     @keyframes pulse{ 0%,100%{ transform:translate(-50%,-50%) scale(.85); opacity:.85 } 50%{ transform:translate(-50%,-50%) scale(1.1); opacity:1 } }
-
-    /* hide league badge on small screens */
     @media(max-width:600px){ #leagueBadge{ display:none; } }
-
-    /* back button styling */
     .btn{
       display:inline-block;
       padding:8px 14px;
@@ -242,12 +200,7 @@
       font-weight:500;
       transition: background 0.25s ease, color 0.25s ease;
     }
-    .btn:hover{
-      background: var(--accent);
-      color:#ffffff;
-    }
-
-    /* header */
+    .btn:hover{ background: var(--accent); color:#ffffff; }
     header.header{
       background: var(--secondary-bg);
       border-bottom:1px solid var(--border-col);
@@ -298,107 +251,28 @@
 </main>
 
 <script>
-  // ======== CONFIG ========
-  const API_KEY = 'kix-7d29f2d9ef3c4';
-  const API_BASE = './api';
+  const $ = id => document.getElementById(id);
+  let __loadFailTimer = null;
 
-  function apiFetch(url, init = {}) {
-    const u = new URL(url, location.href);
-    u.searchParams.set('api_key', API_KEY);
-    const headers = Object.assign({}, init.headers || {}, {
-      'API_key': API_KEY,
-      'api_key': API_KEY,
-      'X-API-Key': API_KEY
-    });
-    return fetch(u.toString(), Object.assign({ credentials: 'include' }, init, { headers }));
+  function hideLoading(){
+    try{ $('loadingOverlay').classList.add('hidden'); }catch(e){}
+    if(__loadFailTimer){ clearTimeout(__loadFailTimer); __loadFailTimer = null; }
   }
 
-  // ======== helpers ========
-  let __loadFailTimer = null;
-  const $ = id => document.getElementById(id);
-  function hideLoading(){ try{ $('loadingOverlay').classList.add('hidden'); }catch{} if(__loadFailTimer){clearTimeout(__loadFailTimer);__loadFailTimer=null;} }
   function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
   function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
   function capWords(s){ return String(s||'').split(/[-\\s]+/).map(w => w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
-  function ymdFromIso(x){ try{ return String(x||'').slice(0,10) || null; }catch{return null;} }
-  function addDays(dateStr, delta){ const dt = new Date(Date.UTC(+dateStr.slice(0,4), +dateStr.slice(5,7)-1, +dateStr.slice(8,10))); dt.setUTCDate(dt.getUTCDate()+delta); return dt.toISOString().slice(0,10); }
+  function addDaysISO(iso, n){ const d = new Date(iso); d.setDate(d.getDate()+n); return d.toISOString().slice(0,10); }
+  function isoToYMD(iso){ return iso.replace(/-/g,''); }
 
-  /**
-   * Map various status codes coming from the fixture API into human friendly labels.
-   * The API can return statuses such as "IN_PLAY", "PAUSED", "SCHEDULED", "FINISHED",
-   * "HALF-TIME" etc. We normalise them to four distinct states:
-   *  - Scheduled: the match has not started yet
-   *  - Live: the match is currently in progress (1st or 2nd half)
-   *  - Half Time: the match is in its half‑time break
-   *  - Finished: the match has concluded
-   * If none of the above patterns are detected the original status string is returned.
-   */
   function formatStatus(status){
     const raw = String(status || '').toUpperCase();
-    // patterns representing a live match
     const livePatterns = ['IN_PLAY','LIVE','PLAYING','1ST HALF','FIRST HALF','2ND HALF','SECOND HALF'];
     for (const p of livePatterns){ if (raw.includes(p)) return 'Live'; }
-    // patterns representing half time
     const halfPatterns = ['HALF-TIME','HALFTIME','HT','HALF TIME','PAUSED'];
     for (const p of halfPatterns){ if (raw.includes(p)) return 'Half Time'; }
-    // patterns representing finished matches
     const finPatterns = ['FINISHED','FULL-TIME','FT','FINAL','ENDED'];
     for (const p of finPatterns){ if (raw.includes(p)) return 'Finished'; }
-    // scheduled / not started
-    const schedPatterns = ['SCHEDULED','NOT_STARTED','NS'];
-    for (const p of schedPatterns){ if (raw.includes(p)) return 'Scheduled'; }
-    return status || '';
-  }
-
-  /**
-   * Map various status codes coming from the fixture API into human friendly labels.
-   * The API can return statuses such as "IN_PLAY", "PAUSED", "SCHEDULED", "FINISHED",
-   * "HALF-TIME" etc. We normalise them to four distinct states:
-   *  - Scheduled: the match has not started yet
-   *  - Live: the match is currently in progress (1st or 2nd half)
-   *  - Half Time: the match is in its half‑time break
-   *  - Finished: the match has concluded
-   * If none of the above patterns are detected the original status string is returned.
-   */
-  function formatStatus(status){
-    const raw = String(status || '').toUpperCase();
-    // patterns representing a live match
-    const livePatterns = ['IN_PLAY','LIVE','PLAYING','1ST HALF','FIRST HALF','2ND HALF','SECOND HALF'];
-    for (const p of livePatterns){ if (raw.includes(p)) return 'Live'; }
-    // patterns representing half time
-    const halfPatterns = ['HALF-TIME','HALFTIME','HT','HALF TIME','PAUSED'];
-    for (const p of halfPatterns){ if (raw.includes(p)) return 'Half Time'; }
-    // patterns representing finished matches
-    const finPatterns = ['FINISHED','FULL-TIME','FT','FINAL','ENDED'];
-    for (const p of finPatterns){ if (raw.includes(p)) return 'Finished'; }
-    // scheduled / not started
-    const schedPatterns = ['SCHEDULED','NOT_STARTED','NS'];
-    for (const p of schedPatterns){ if (raw.includes(p)) return 'Scheduled'; }
-    return status || '';
-  }
-
-  /**
-   * Map various status codes coming from the fixture API into human friendly labels.
-   * The API can return statuses such as "IN_PLAY", "PAUSED", "SCHEDULED", "FINISHED",
-   * "HALF-TIME" etc.  We normalise them to four distinct states:
-   *  - Scheduled: the match has not started yet
-   *  - Live: the match is currently in progress (1st or 2nd half)
-   *  - Half Time: the match is in its half‑time break
-   *  - Finished: the match has concluded
-   * If none of the above patterns are detected the original status string is returned.
-   */
-  function formatStatus(status){
-    const raw = String(status || '').toUpperCase();
-    // Normalise live statuses
-    const livePatterns = ['IN_PLAY','LIVE','PLAYING','1ST HALF','FIRST HALF','2ND HALF','SECOND HALF'];
-    for (const p of livePatterns){ if (raw.includes(p)) return 'Live'; }
-    // Half-time patterns
-    const halfPatterns = ['HALF-TIME','HALFTIME','HT','HALF TIME','PAUSED'];
-    for (const p of halfPatterns){ if (raw.includes(p)) return 'Half Time'; }
-    // Finished patterns
-    const finPatterns = ['FINISHED','FULL-TIME','FT','FINAL','ENDED'];
-    for (const p of finPatterns){ if (raw.includes(p)) return 'Finished'; }
-    // Scheduled / not started patterns
     const schedPatterns = ['SCHEDULED','NOT_STARTED','NS'];
     for (const p of schedPatterns){ if (raw.includes(p)) return 'Scheduled'; }
     return status || '';
@@ -410,113 +284,99 @@
     const url = 'https://crutchanalyse.com/w2n5uxyv5?key=421e53b34da32e5044e25f26baddab45';
     bar.innerHTML = labels.map(l => `<a class="sbtn" href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
   }
-  function renderServerButtonsFromFixture(fx){
-    const home = fx?.home?.name || ''; const away = fx?.away?.name || '';
-    const sl = slug(home + '-vs-' + away);
-    renderServerButtonsFromSlug(sl);
-  }
 
-  (function prime(){
-    const id = qs('id');
-    if (id && id.includes('@')){
-      const slPart = id.split('@')[0];
-      const toks = slPart.split('-vs-');
-      if (toks.length === 2){
-        $('homeName').textContent = capWords(toks[0]);
-        $('awayName').textContent = capWords(toks[1]);
-        renderServerButtonsFromSlug(slPart);
-      }
-    }
-  })();
-
-  async function fixturesFor(dateStr){
-    const r = await apiFetch(`${API_BASE}/fixtures?date=${encodeURIComponent(dateStr)}`, { cache: 'no-store' }).catch(() => null);
-    if (!r || !r.ok) return []; // don't surface 404—some dates just have none
-    const j = await r.json().catch(() => null);
-    const list = j?.fixtures || j?.data?.fixtures || [];
-    return Array.isArray(list) ? list : [];
-  }
-
-  function tokens(name){
-    const s = slug(name); const parts = s.split('-').filter(Boolean);
-    const first = parts[0] || s, last = parts[parts.length-1] || s;
-    return { full:s, first, last };
-  }
   function matchSlug(slugPart, fx){
-    const nmHome = tokens(fx.home?.name || '');
-    const nmAway = tokens(fx.away?.name || '');
-    const pairA = slug(nmHome.full + '-vs-' + nmAway.full);
-    const pairB = slug(nmAway.full + '-vs-' + nmHome.full);
-    if (slugPart === pairA || slugPart === pairB) return true;
-    const toks = slugPart.split('-vs-');
-    if (toks.length === 2){
-      const a=toks[0], b=toks[1];
-      const hitAB = (nmHome.full.includes(a) || nmHome.first===a || nmHome.last===a) && (nmAway.full.includes(b) || nmAway.first===b || nmAway.last===b);
-      const hitBA = (nmHome.full.includes(b) || nmHome.first===b || nmHome.last===b) && (nmAway.full.includes(a) || nmAway.first===a || nmAway.last===a);
-      return hitAB || hitBA;
+    const homeSlug = slug(fx.home?.name || '');
+    const awaySlug = slug(fx.away?.name || '');
+    return slugPart === `${homeSlug}-vs-${awaySlug}` || slugPart === `${awaySlug}-vs-${homeSlug}`;
+  }
+
+  async function fixturesFor(isoDate){
+    // try local first
+    const ymd = isoToYMD(isoDate);
+    const urls = [
+      `/fixtures.php?date=${ymd}`,
+      `https://fotbal.site/fixtures.php?date=${ymd}`
+    ];
+    for (const u of urls){
+      try{
+        const r = await fetch(u, {cache:'no-store'});
+        if (!r.ok) continue;
+        const text = await r.text();
+        let data;
+        try { data = JSON.parse(text); } catch(e){ continue; }
+        if (Array.isArray(data)) return data;
+        if (data && Array.isArray(data.fixtures)) return data.fixtures;
+      }catch(e){}
     }
-    return false;
+    return [];
   }
 
   function applyFixture(fx){
     const homeName = fx.home?.name || 'Home';
     const awayName = fx.away?.name || 'Away';
-    const homeLogo = fx.home?.logo || '';
-    const awayLogo = fx.away?.logo || '';
+    const homeLogo = fx.home?.logo || '/logo.svg';
+    const awayLogo = fx.away?.logo || '/logo.svg';
     const league   = fx.league?.name || '';
-    // raw status string provided by the API
     const statusRaw = fx.status || 'SCHEDULED';
     const kickoff  = fx.start_utc || '';
 
     $('homeName').textContent = homeName;
     $('awayName').textContent = awayName;
-    $('homeLogo').src = homeLogo || '/logo.svg';
-    $('awayLogo').src = awayLogo || '/logo.svg';
-    $('leagueBadge').textContent = league || ''; $('league').textContent = league || '-';
-    // derive a human friendly status from the API value
+    $('homeLogo').src = homeLogo;
+    $('awayLogo').src = awayLogo;
+    $('leagueBadge').textContent = league || '';
+    $('league').textContent = league || '-';
+
     const friendlyStatus = formatStatus(statusRaw);
     $('state').textContent = friendlyStatus || '-';
-    $('kickoff').textContent = kickoff ? new Date(kickoff).toLocaleString() : '-';
     $('statusLine').textContent = friendlyStatus || '';
+    $('kickoff').textContent = kickoff ? new Date(kickoff).toLocaleString() : '-';
 
-    renderServerButtonsFromFixture(fx);
+    renderServerButtonsFromSlug(slug(homeName + '-vs-' + awayName));
     hideLoading();
   }
 
   async function load(){
-    document.getElementById('loadingOverlay').classList.remove('hidden');
+    $('loadingOverlay').classList.remove('hidden');
     __loadFailTimer = setTimeout(hideLoading, 3500);
 
-    const id  = qs('id');
-    if (!id){ $('statusLine').textContent='Missing match id'; hideLoading(); return; }
+    const rawId = qs('id') || qs('m') || '';
+    if (!rawId){ $('statusLine').textContent='Missing match id'; hideLoading(); return; }
 
-    async function serverResolve(){
-      try{
-        let r = await apiFetch(`${API_BASE}/fixture/${encodeURIComponent(id)}`);
-        if (!r.ok) r = await apiFetch(`${API_BASE}/fixture?id=${encodeURIComponent(id)}`);
-        if (r.ok){ const j = await r.json().catch(()=>null); return (j && (j.fixture || j.data?.fixture)) || null; }
-      }catch(e){}
-      return null;
+    // prefill names from slug so UI isn’t empty
+    const pureSlug = rawId.includes('@') ? rawId.split('@')[0] : rawId;
+    const parts = pureSlug.split('-vs-');
+    if (parts.length === 2){
+      $('homeName').textContent = capWords(parts[0]);
+      $('awayName').textContent = capWords(parts[1]);
+      renderServerButtonsFromSlug(pureSlug);
     }
 
-    async function clientResolve(){
-      const hasAt = id.includes('@');
-      const slugPart = slug(hasAt ? id.split('@')[0] : id);
-      const isoHint  = hasAt ? id.split('@')[1] : null;
-      const base = (isoHint || new Date().toISOString()).slice(0,10);
-      const days = [ -2,-1,0,1,2 ].map(n => addDays(base, n));
-      for (const d of days){
-        const list = await fixturesFor(d);
-        const hit = list.find(fx => matchSlug(slugPart, fx));
-        if (hit) return hit;
-      }
-      return null;
+    const baseISO = rawId.includes('@')
+      ? rawId.split('@')[1].replace(/(\\d{4})(\\d{2})(\\d{2})/, '$1-$2-$3')
+      : new Date().toISOString().slice(0,10);
+
+    const slugPart = slug(pureSlug);
+
+    const days = [-2,-1,0,1,2];
+    let found = null;
+    for (const off of days){
+      const dateISO = addDaysISO(baseISO, off);
+      const list = await fixturesFor(dateISO);
+      const hit = list.find(fx => matchSlug(slugPart, fx));
+      if (hit){ found = hit; break; }
     }
 
-    const [s,c] = await Promise.allSettled([serverResolve(), clientResolve()]);
-    const fx = (s.status==='fulfilled' && s.value) || (c.status==='fulfilled' && c.value) || null;
-    if (fx){ applyFixture(fx); } else { $('statusLine').textContent='Could not load match data.'; hideLoading(); }
+    if (found){
+      applyFixture(found);
+    } else {
+      $('statusLine').textContent = ''; // keep UI, just no extra data
+      hideLoading();
+    }
   }
+
   load();
-</script></body>
+</script>
+</body>
 </html>
