--- a/public/watch.html
+++ b/public/watch.html
@@ -23,7 +23,7 @@
       font-family:'Segoe UI', Tahoma, sans-serif;
     }
 
-    /* simple loader, always visible at start */
+    /* simple loader */
     #kx-loader{
       position:fixed;
       inset:0;
@@ -33,9 +33,7 @@
       justify-content:center;
       z-index:100;
     }
-    #kx-loader.hidden{
-      display:none;
-    }
+    #kx-loader.hidden{display:none;}
     .kx-panel{
       background:rgba(15,23,42,.35);
       border:1px solid rgba(148,163,184,.35);
@@ -53,18 +51,42 @@
     .kx-title{font-weight:600;}
     .kx-sub{font-size:13px;color:#94a3b8;}
 
-    /* main page hidden initially */
-    #page{
-      display:none;
-    }
-
+    #page{display:none;}
     .wrap{ max-width:980px; margin:0 auto; padding:clamp(12px,3vw,22px); }
+
     header.header{ background:rgba(15,23,42,.35); border-bottom:1px solid rgba(51,65,85,.4); }
     header .bar{ max-width:980px; margin:0 auto; padding:16px; display:flex; align-items:center; }
-    .headerbar{ display:grid; grid-template-columns:auto 1fr auto; align-items:center; margin-bottom:16px; }
-    .btn{ display:inline-block; padding:8px 14px; border:1px solid #6366f1; border-radius:8px; color:#6366f1; text-decoration:none; font-weight:500; }
+
+    .headerbar{
+      display:grid;
+      grid-template-columns:auto 1fr auto;
+      align-items:center;
+      margin-bottom:16px;
+    }
+
+    .btn{
+      display:inline-block;
+      padding:8px 14px;
+      border:1px solid #6366f1;
+      border-radius:8px;
+      color:#6366f1;
+      text-decoration:none;
+      font-weight:500;
+    }
     .btn:hover{ background:#6366f1; color:#fff; }
-    .badge{ display:inline-block; padding:4px 12px; border-radius:999px; border:1px solid rgba(148,163,184,.35); background:rgba(15,23,42,.45); font-size:12px; }
+
+    .badge{
+      display:inline-block;
+      padding:4px 12px;
+      border-radius:999px;
+      border:1px solid rgba(148,163,184,.35);
+      background:rgba(15,23,42,.45);
+      font-size:12px;
+    }
+
+    /* hide the league badge pill */
+    #leagueBadge { display:none !important; }
+
     .teams{
       display:grid;
       grid-template-columns:1fr auto 1fr;
@@ -77,10 +99,13 @@
       padding:16px;
       margin:20px 0 8px;
     }
+
     .side{ display:flex; flex-direction:column; align-items:center; gap:10px; }
     .side img{ width:80px; height:80px; object-fit:contain; }
     .teamName{ font-size:20px; font-weight:600; white-space:normal; overflow-wrap:anywhere; text-align:center; }
+
     .h1{ font-size:32px; font-weight:800; color:#6366f1; }
+
     .meta{
       display:grid;
       grid-template-columns:repeat(3,minmax(0,1fr));
@@ -91,10 +116,7 @@
       padding:14px;
       margin:18px 0;
     }
-    @media(max-width:700px){
-      .teams{grid-template-columns:1fr;}
-      .meta{grid-template-columns:repeat(2,minmax(0,1fr));}
-    }
+
     .serverbar{
       background:rgba(15,23,42,.45);
       border:1px solid rgba(148,163,184,.15);
@@ -112,39 +134,25 @@
       text-decoration:none;
       color:#fff;
       font-weight:500;
+      flex:0 0 calc(50% - 10px);
+      text-align:center;
     }
-  @media (max-width: 520px){
-  .wrap{
-    padding: 12px;
-  }
-  .headerbar{
-    grid-template-columns: 1fr;
-    gap: 10px;
-  }
-  .teams .side img{
-    width: 60px;
-    height: 60px;
-  }
-  .teamName{
-    font-size: 16px;
-  }
-  .serverbar{
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    gap: 10px;
-  }
-  .serverbar a{
-    flex: 0 0 auto;
-    white-space: nowrap;
-  }
-  .meta{
-    grid-template-columns: 1fr;
-  }
-}
-</style>
-</head>
-<body>
 
+    /* ✅ Improved mobile view */
+    @media (max-width:520px){
+      .wrap{padding:10px 10px 80px;}
+      .headerbar{grid-template-columns:auto 1fr; gap:10px;}
+      .teams{gap:14px;}
+      .teams .side img{width:58px; height:58px;}
+      .teamName{font-size:15px;}
+      .meta{grid-template-columns:1fr; gap:10px;}
+      .serverbar{flex-wrap:wrap; overflow-x:visible; justify-content:flex-start; gap:10px;}
+      .serverbar a{flex:0 0 calc(50% - 10px);}
+    }
+  </style>
+</head>
+
+<body>
 <!-- loader -->
 <div id="kx-loader">
   <div class="kx-panel">
@@ -208,129 +216,112 @@
 
   function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
   function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
-  function capWords(s){ return String(s||'').split(/[-\s]+/).map(w=>w?w[0].toUpperCase()+w.slice(1):'').join(' '); }
-  function addDaysISO(iso, n){ const d = new Date(iso); d.setDate(d.getDate()+n); return d.toISOString().slice(0,10); }
-  function isoToYMD(iso){ return iso.replace(/-/g,''); }
+  function capWords(s){ return String(s||'').split(/[-\\s]+/).map(w=>w?w[0].toUpperCase()+w.slice(1):'').join(' '); }
+  function addDaysISO(iso,n){const d=new Date(iso);d.setDate(d.getDate()+n);return d.toISOString().slice(0,10);}
+  function isoToYMD(iso){return iso.replace(/-/g,'');}
 
   function formatStatus(status){
-    const raw = String(status || '').toUpperCase();
-    const live = ['IN_PLAY','LIVE','PLAYING','1ST HALF','2ND HALF','FIRST HALF','SECOND HALF'];
-    if (live.some(p=>raw.includes(p))) return 'Live';
-    const half = ['HALF-TIME','HALFTIME','HT','PAUSED','BREAK'];
-    if (half.some(p=>raw.includes(p))) return 'Half / Pause';
-    const fin = ['FINISHED','FULL-TIME','FT','FINAL','ENDED','STATUS_FINAL'];
-    if (fin.some(p=>raw.includes(p))) return 'Finished';
-    const sched = ['SCHEDULED','NOT_STARTED','NS'];
-    if (sched.some(p=>raw.includes(p))) return 'Scheduled';
-    return status || '';
+    const raw=String(status||'').toUpperCase();
+    const live=['IN_PLAY','LIVE','PLAYING','1ST HALF','2ND HALF','FIRST HALF','SECOND HALF'];
+    if(live.some(p=>raw.includes(p)))return'Live';
+    const half=['HALF-TIME','HALFTIME','HT','PAUSED','BREAK'];
+    if(half.some(p=>raw.includes(p)))return'Half / Pause';
+    const fin=['FINISHED','FULL-TIME','FT','FINAL','ENDED','STATUS_FINAL'];
+    if(fin.some(p=>raw.includes(p)))return'Finished';
+    const sched=['SCHEDULED','NOT_STARTED','NS'];
+    if(sched.some(p=>raw.includes(p)))return'Scheduled';
+    return status||'';
   }
 
   function renderServers(slugPart){
-    const bar = $('serverBar') || $('servers');
-    if (!bar) return;
-    const url = '/stream_premium.html?id=' + encodeURIComponent(slugPart) + '&k=2e53b34da32e5044e25f26baddab45';
-    const labels = ['Server 1','Server 2','Server 3','Server 4','Server 5'];
-    bar.innerHTML = labels.map(l=>`<a href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
+    const bar=$('serverBar')||$('servers');
+    if(!bar)return;
+    const url='/stream_premium.html?id='+encodeURIComponent(slugPart)+'&k=2e53b34da32e5044e25f26baddab45';
+    const labels=['Server 1','Server 2','Server 3','Server 4','Server 5'];
+    bar.innerHTML=labels.map(l=>`<a href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
   }
 
-  function matchSlug(sl, fx){
-    const h = slug(fx.home?.name || '');
-    const a = slug(fx.away?.name || '');
-    return sl === `${h}-vs-${a}` || sl === `${a}-vs-${h}`;
+  function matchSlug(sl,fx){
+    const h=slug(fx.home?.name||'');
+    const a=slug(fx.away?.name||'');
+    return sl===`${h}-vs-${a}`||sl===`${a}-vs-${h}`;
   }
 
   async function fixturesFor(isoDate){
-    const ymd = isoToYMD(isoDate);
-    const urls = [
-      `/fixtures.php?date=${ymd}`,
-      `https://fotbal.site/fixtures.php?date=${ymd}`
-    ];
-    for (const u of urls){
+    const ymd=isoToYMD(isoDate);
+    const urls=[`/fixtures.php?date=${ymd}`,`https://fotbal.site/fixtures.php?date=${ymd}`];
+    for(const u of urls){
       try{
-        const r = await fetch(u, {cache:'no-store'});
-        if (!r.ok) continue;
-        const t = await r.text();
+        const r=await fetch(u,{cache:'no-store'});
+        if(!r.ok)continue;
+        const t=await r.text();
         let data;
-        try { data = JSON.parse(t); } catch { continue; }
-        if (Array.isArray(data)) return data;
-        if (data && Array.isArray(data.fixtures)) return data.fixtures;
+        try{data=JSON.parse(t);}catch{continue;}
+        if(Array.isArray(data))return data;
+        if(data&&Array.isArray(data.fixtures))return data.fixtures;
       }catch(e){}
     }
-    return [];
+    return[];
   }
 
   function applyFixtureStatus(fx){
-    const pretty = formatStatus(fx.status);
-    $('state').textContent = pretty || '-';
-    $('statusLine').textContent = pretty || '';
-    $('kickoff').textContent = fx.start_utc ? new Date(fx.start_utc).toLocaleString() : '-';
+    const pretty=formatStatus(fx.status);
+    $('state').textContent=pretty||'-';
+    $('statusLine').textContent=pretty||'';
+    $('kickoff').textContent=fx.start_utc?new Date(fx.start_utc).toLocaleString():'-';
   }
 
   function applyFixture(fx){
-    const hn = fx.home?.name || 'Home';
-    const an = fx.away?.name || 'Away';
-    $('homeName').textContent = hn;
-    $('awayName').textContent = an;
-    $('homeLogo').src = fx.home?.logo || '/logo.svg';
-    $('awayLogo').src = fx.away?.logo || '/logo.svg';
-    $('league').textContent = fx.league?.name || '-';
-    $('leagueBadge').textContent = fx.league?.name || '';
+    const hn=fx.home?.name||'Home';
+    const an=fx.away?.name||'Away';
+    $('homeName').textContent=hn;
+    $('awayName').textContent=an;
+    $('homeLogo').src=fx.home?.logo||'/logo.svg';
+    $('awayLogo').src=fx.away?.logo||'/logo.svg';
+    $('league').textContent=fx.league?.name||'-';
     applyFixtureStatus(fx);
-    renderServers(slug(hn + '-vs-' + an));
+    renderServers(slug(hn+'-vs-'+an));
   }
 
-  function startStatusPoll(baseISO, slugPart){
-    setInterval(async () => {
-      const list = await fixturesFor(baseISO);
-      const hit = list.find(fx => matchSlug(slugPart, fx));
-      if (hit) applyFixtureStatus(hit);
-    }, 25000);
+  function startStatusPoll(baseISO,slugPart){
+    setInterval(async()=>{
+      const list=await fixturesFor(baseISO);
+      const hit=list.find(fx=>matchSlug(slugPart,fx));
+      if(hit)applyFixtureStatus(hit);
+    },25000);
   }
 
   async function load(){
-    const raw = qs('id') || qs('m') || '';
-
-    if (raw){
-      const pure = raw.includes('@') ? raw.split('@')[0] : raw;
-      const parts = pure.split('-vs-');
-      if (parts.length === 2){
-        $('homeName').textContent = capWords(parts[0]);
-        $('awayName').textContent = capWords(parts[1]);
+    const raw=qs('id')||qs('m')||'';
+    if(raw){
+      const pure=raw.includes('@')?raw.split('@')[0]:raw;
+      const parts=pure.split('-vs-');
+      if(parts.length===2){
+        $('homeName').textContent=capWords(parts[0]);
+        $('awayName').textContent=capWords(parts[1]);
         renderServers(pure);
-      } else {
-        $('homeName').textContent = capWords(pure);
+      }else{
+        $('homeName').textContent=capWords(pure);
         renderServers(pure);
       }
     }
-
-    const baseISO = raw.includes('@')
-      ? raw.split('@')[1].replace(/(\d{4})(\d{2})(\d{2})/, '$1-$2-$3')
-      : new Date().toISOString().slice(0,10);
-
-    const slugPart = slug(raw.includes('@') ? raw.split('@')[0] : raw);
-
-    const days = [-2,-1,0,1,2];
-    let found = null;
-    let foundDate = baseISO;
-
-    for (const off of days){
-      const iso = addDaysISO(baseISO, off);
-      const list = await fixturesFor(iso);
-      const hit = list.find(fx => matchSlug(slugPart, fx));
-      if (hit){
-        found = hit;
-        foundDate = iso;
-        break;
-      }
+    const baseISO=raw.includes('@')?raw.split('@')[1].replace(/(\\d{4})(\\d{2})(\\d{2})/,'$1-$2-$3'):new Date().toISOString().slice(0,10);
+    const slugPart=slug(raw.includes('@')?raw.split('@')[0]:raw);
+    const days=[-2,-1,0,1,2];
+    let found=null;
+    let foundDate=baseISO;
+    for(const off of days){
+      const iso=addDaysISO(baseISO,off);
+      const list=await fixturesFor(iso);
+      const hit=list.find(fx=>matchSlug(slugPart,fx));
+      if(hit){found=hit;foundDate=iso;break;}
     }
-
-    if (found){
+    if(found){
       applyFixture(found);
-      startStatusPoll(foundDate, slugPart);
+      startStatusPoll(foundDate,slugPart);
     }
-
     $('kx-loader').classList.add('hidden');
-    $('page').style.display = 'block';
+    $('page').style.display='block';
   }
 
   load();
